# nexcore-grammar-lab

./: Cargo.toml  README.md  THEORY.md
src/: exp1_regular.rs  exp2_context_free.rs  exp3_context_sensitive.rs  exp4_unrestricted.rs  grounding.rs  lib.rs
